csbind/src/joltc.rs

#[test]
fn bindgen_test_layout_JPH_PhysicsSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_PhysicsSettings> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_PhysicsSettings>(),
        84usize,
        concat!("Size of: ", stringify!(JPH_PhysicsSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_PhysicsSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_PhysicsSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxInFlightBodyPairs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(maxInFlightBodyPairs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stepListenersBatchSize) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(stepListenersBatchSize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stepListenerBatchesPerJob) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(stepListenerBatchesPerJob)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).baumgarte) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(baumgarte)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).speculativeContactDistance) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(speculativeContactDistance)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).penetrationSlop) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(penetrationSlop)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).linearCastThreshold) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(linearCastThreshold)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).linearCastMaxPenetration) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(linearCastMaxPenetration)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).manifoldToleranceSq) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(manifoldToleranceSq)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxPenetrationDistance) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(maxPenetrationDistance)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).bodyPairCacheMaxDeltaPositionSq) as usize - ptr as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(bodyPairCacheMaxDeltaPositionSq)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).bodyPairCacheCosMaxDeltaRotationDiv2) as usize
                - ptr as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(bodyPairCacheCosMaxDeltaRotationDiv2)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).contactNormalCosMaxDeltaRotation) as usize - ptr as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(contactNormalCosMaxDeltaRotation)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).contactPointPreserveLambdaMaxDistSq) as usize - ptr as usize
        },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(contactPointPreserveLambdaMaxDistSq)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).numVelocitySteps) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(numVelocitySteps)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).numPositionSteps) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(numPositionSteps)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minVelocityForRestitution) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(minVelocityForRestitution)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timeBeforeSleep) as usize - ptr as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(timeBeforeSleep)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pointVelocitySleepThreshold) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(pointVelocitySleepThreshold)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).deterministicSimulation) as usize - ptr as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(deterministicSimulation)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).constraintWarmStart) as usize - ptr as usize },
        77usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(constraintWarmStart)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).useBodyPairContactCache) as usize - ptr as usize },
        78usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(useBodyPairContactCache)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).useManifoldReduction) as usize - ptr as usize },
        79usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(useManifoldReduction)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).useLargeIslandSplitter) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(useLargeIslandSplitter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).allowSleeping) as usize - ptr as usize },
        81usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(allowSleeping)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).checkActiveEdges) as usize - ptr as usize },
        82usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSettings),
            "::",
            stringify!(checkActiveEdges)
        )
    );
}
extern "C" {
    pub fn JPH_PhysicsSystem_Create(
        settings: *const JPH_PhysicsSystemSettings,
    ) -> *mut JPH_PhysicsSystem;
}
extern "C" {
    pub fn JPH_PhysicsSystem_Destroy(system: *mut JPH_PhysicsSystem);
}
extern "C" {
    pub fn JPH_PhysicsSystem_SetPhysicsSettings(
        system: *mut JPH_PhysicsSystem,
        settings: *mut JPH_PhysicsSettings,
    );
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetPhysicsSettings(
        system: *mut JPH_PhysicsSystem,
        result: *mut JPH_PhysicsSettings,
    );
}
extern "C" {
    pub fn JPH_PhysicsSystem_OptimizeBroadPhase(system: *mut JPH_PhysicsSystem);
}
extern "C" {
    pub fn JPH_PhysicsSystem_Update(
        system: *mut JPH_PhysicsSystem,
        deltaTime: f32,
        collisionSteps: ::std::os::raw::c_int,
    ) -> JPH_PhysicsUpdateError;
}
extern "C" {
    pub fn JPH_PhysicsSystem_Step(
        system: *mut JPH_PhysicsSystem,
        deltaTime: f32,
        collisionSteps: ::std::os::raw::c_int,
    ) -> JPH_PhysicsUpdateError;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetBodyInterface(
        system: *mut JPH_PhysicsSystem,
    ) -> *mut JPH_BodyInterface;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetBodyInterfaceNoLock(
        system: *mut JPH_PhysicsSystem,
    ) -> *mut JPH_BodyInterface;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetBodyLockInterface(
        system: *const JPH_PhysicsSystem,
    ) -> *const JPH_BodyLockInterface;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetBodyLockInterfaceNoLock(
        system: *const JPH_PhysicsSystem,
    ) -> *const JPH_BodyLockInterface;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetBroadPhaseQuery(
        system: *const JPH_PhysicsSystem,
    ) -> *const JPH_BroadPhaseQuery;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetNarrowPhaseQuery(
        system: *const JPH_PhysicsSystem,
    ) -> *const JPH_NarrowPhaseQuery;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetNarrowPhaseQueryNoLock(
        system: *const JPH_PhysicsSystem,
    ) -> *const JPH_NarrowPhaseQuery;
}
extern "C" {
    pub fn JPH_PhysicsSystem_SetContactListener(
        system: *mut JPH_PhysicsSystem,
        listener: *mut JPH_ContactListener,
    );
}
extern "C" {
    pub fn JPH_PhysicsSystem_SetBodyActivationListener(
        system: *mut JPH_PhysicsSystem,
        listener: *mut JPH_BodyActivationListener,
    );
}
extern "C" {
    pub fn JPH_PhysicsSystem_WereBodiesInContact(
        system: *const JPH_PhysicsSystem,
        body1: JPH_BodyID,
        body2: JPH_BodyID,
    ) -> bool;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetNumBodies(system: *const JPH_PhysicsSystem) -> u32;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetNumActiveBodies(
        system: *const JPH_PhysicsSystem,
        type_: JPH_BodyType,
    ) -> u32;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetMaxBodies(system: *const JPH_PhysicsSystem) -> u32;
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetNumConstraints(system: *const JPH_PhysicsSystem) -> u32;
}
extern "C" {
    pub fn JPH_PhysicsSystem_SetGravity(system: *mut JPH_PhysicsSystem, value: *const JPH_Vec3);
}
extern "C" {
    pub fn JPH_PhysicsSystem_GetGravity(system: *mut JPH_PhysicsSystem, result: *mut JPH_Vec3);
}
extern "C" {
    pub fn JPH_PhysicsSystem_AddConstraint(
        system: *mut JPH_PhysicsSystem,
        constraint: *mut JPH_Constraint,
    );
}
